# django-project-template

./: .pre-commit-config.yaml  README.md  manage.py  pyproject.toml  tox.ini
.github/workflows/: test.yml
project_name/: asgi.py  settings.py  urls.py  wsgi.py
