[project]
name = "django-project-template"
version = "6.0.0"
description = "A Django 6.0 project template"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0,<7.0",
    "django-environ>=0.12.0",
    "django-extensions>=4.1",
    "docutils>=0.22.4",
    "pillow>=12.1.0",
    "rich>=14.2.0",
    "granian>=2.6.0",
]

[dependency-groups]
dev = [
    "coverage>=7.13.1",
    "django-debug-toolbar>=6.1.0",
    "djlint>=1.36.4",
    "ipython>=8.37.0",
    "pre-commit>=4.5.1",
    "ruff>=0.14.10",
    "tox>=4.33.0",
    "tox-uv>=1.29.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "DJ",   # flake8-django
    "LOG",  # flake8-logging
    "T20",  # flake8-print
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"*/migrations/*" = ["E501"]
"manage.py" = ["E402"]
"*/celery.py" = ["T201"]  # Allow print in debug tasks

[tool.ruff.lint.isort]
# Replace "project_name" with the actual project package name
known-first-party = ["project_name"]
